backported 0.0.7 pre1 and pre2